Fix cropped paper buttons in docs section on small desktop

--- a/css/site2.css
+++ b/css/site2.css
@@ -440,4 +440,10 @@ right: 0;*/ float: right; }
 @media only screen and (min-width: 851px) and (max-width: 990px) { /* line 169, ../sass/mobile.scss */
   #future polymer-ui-toolbar { -webkit-flex-wrap: wrap; -moz-flex-wrap: wrap; -ms-flex-wrap: wrap; -o-flex-wrap: wrap; flex-wrap: wrap; }
   /* line 171, ../sass/mobile.scss */
-  #future polymer-ui-toolbar .paper-button:not(:last-child) { margin-right: 10px; margin-bottom: 16px; } }
+  #future polymer-ui-toolbar .paper-button:not(:last-child) { margin-right: 10px; margin-bottom: 16px; }
+  /* line 179, ../sass/mobile.scss */
+  footer polymer-ui-toolbar { -webkit-flex-wrap: wrap; -moz-flex-wrap: wrap; -ms-flex-wrap: wrap; -o-flex-wrap: wrap; flex-wrap: wrap; -webkit-box-pack: flex-start; -webkit-justify-content: flex-start; -moz-justify-content: flex-start; -ms-justify-content: flex-start; -o-justify-content: flex-start; justify-content: flex-start; }
+  /* line 183, ../sass/mobile.scss */
+  footer polymer-ui-toolbar .paper-button { margin-bottom: 16px; }
+  /* line 188, ../sass/mobile.scss */
+  footer #copyright { margin-top: -16px; } }
